Fri Jan 25 14:03:36 2002  Tim Janik  <timj@gtk.org>

	* gtk/gtkspinbutton.c (gtk_spin_button_draw_arrow): assert
	that the passed in arrow is always _UP or _DOWN, this catches
	false invocations which lead to drawing artefacts.
	(start_spinning): likewise, i.e. sanity check the passed in arrow.
	(gtk_spin_button_button_release): fix arrow redrawing.
	(gtk_spin_button_button_press): must set click_child for
	button3 even if we don't take spinning action right away.

	* gtk/gtkspinbutton.h (struct _GtkSpinButton): document
	valid values for click_child.

Thu Jan 24 23:03:24 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_get_path_at_pos): update docs,
	return current FALSE if x is smaller than the current visible area,
	not than the requested area, don't correct y coordinate,
	TREE_WINDOW_Y_TO_RBTREE_Y will do that. Fixes #67477.

Thu Jan 24 15:41:08 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c
	 (gtk_tree_view_motion_draw_column_motion_arrow): fix column
	 reordering fully.
	 (gtk_tree_view_size_allocate): fix evil bug.

Thu Jan 24 11:53:19 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): Don't clear
	the model until we clean up all the other objects
	that might refer to the object.

2002-01-24  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkaccessible.h: include gtk/gtkwidget.h

Wed Jan 23 20:28:59 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c (gtk_notebook_draw_arrow): 
	Use insensitive state for insensitive arrows, not
	just an "etched state". (#67172, Adrian Custer)

2002-01-23  Manish Singh  <yosh@gimp.org>

	* gtk/gtkentry.c (gtk_entry_set_text): use a variable that's actually
	been declared.

2002-01-23  Damon Chaplin  <damon@ximian.com>

	* configure.in (gtk_doc_min_version): set minimum gtk-doc version to
	0.9, since we need to use the new --type-init-func argument for
	gtkdoc-scangobj.

2002-01-23  Matthias Clasen  <matthiasc@poet.de>
